--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,27 @@
         </plugin>
 
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>properties-maven-plugin</artifactId>
+          <version>1.0.0</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>set-system-properties</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <properties>
+              <property>
+                <name>log4j.configuration</name>
+                <value>${project.baseUri}src/main/resources/log4j.properties</value>
+              </property>
+            </properties>
+          </configuration>
+        </plugin>
+
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <version>2.3</version>
