--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,13 @@
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>domain-models-api-interfaces</artifactId>
+	<!-- ### needs to be 2.3.3-SNAPSHOT for ui-okapi-console to work -->
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>domain-models-runtime</artifactId>
+	<!-- ### needs to be 2.3.3-SNAPSHOT for ui-okapi-console to work -->
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
     </dependencies>
