--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/target/
 client/
+#mvn build
+target/
+#vert.x
+.vertx/
+file-uploads/
+#netbeans
+nbproject/
+#eclipse
+.project
+.settings/
+.classpath
