--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,13 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
-      <!-- ### needs to be 2.3.3-SNAPSHOT for ui-okapi-console to work -->
-      <version>10.0.1-SNAPSHOT</version>
+      <version>${raml-module-builder.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>postgres-runner</artifactId>
+      <version>${raml-module-builder.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
@@ -89,6 +94,55 @@
             <goals>
               <goal>exec</goal>
             </goals>
+          </execution>
+          <execution>
+            <id>start-postgres</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>java</executable>
+              <async>true</async>
+              <classpathScope>test</classpathScope>
+              <arguments>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>org.folio.rest.persist.PostgresRunner</argument>
+                <argument>${postgresrunner.port}</argument>
+                <argument>${postgres.port}</argument>
+                <argument>postgres</argument>  <!-- username -->
+                <argument>postgres</argument>  <!-- password -->
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>wait-for-postgres</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <classpathScope>test</classpathScope>
+              <mainClass>org.folio.rest.persist.PostgresWaiter</mainClass>
+              <arguments>
+                <argument>${postgresrunner.port}</argument>
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop-postgres</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <classpathScope>test</classpathScope>
+              <mainClass>org.folio.rest.persist.PostgresStopper</mainClass>
+              <arguments>
+                <argument>${postgresrunner.port}</argument>
+              </arguments>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -223,6 +277,26 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.19.1</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
         <configuration>
@@ -261,9 +335,14 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <raml-module-builder.version>10.0.4-SNAPSHOT</raml-module-builder.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
+    <postgresrunner.port>5434</postgresrunner.port>
+    <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
+    <postgres.port>5433</postgres.port>
   </properties>
 </project>
