--- a/src/main/resources/vertx-default-jul-logging.properties
+++ b/src/main/resources/vertx-default-jul-logging.properties
@@ -36,3 +36,4 @@ java.util.logging.ConsoleHandler.level=FINEST
 io.vertx.ext.web.level=INFO
 io.vertx.level=INFO
 io.netty.util.internal.PlatformDependent.level=SEVERE
+#org.folio.rest.level=FINEST
