--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>8.0.0-SNAPSHOT</version>
+  <version>9.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -366,7 +366,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>10.0.5-SNAPSHOT</raml-module-builder.version>
+    <raml-module-builder.version>11.0.0</raml-module-builder.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
