--- a/ramls/examples/user_collection.sample
+++ b/ramls/examples/user_collection.sample
@@ -2,7 +2,6 @@
   "users": [
     {
       "username": "jhandey",
-      "tenant": "biglibrary",
       "id": "7261ecaae3a74dc68b468e12a70b1aec",
       "active": true,
       "meta": {
@@ -10,14 +9,13 @@
         "last_login_date": ""
       },
       "personal": {
-        "full_name": "Jack Michael Handey",
-        "birth_date": "1965-07-08",
-        "phone_home": "+1 (212) 456-7891",
-        "phone_work": "+1 (212) 567-8912",
-        "phone_mobile": "+1 (212) 678-9123",
-        "email_primary": "jhandey@biglibrary.org",
-        "email_alternate": "handyjack65@gmail.com",
-        "mailing_address": "4567 Langford Ave, Manhattan, NY 11025"
+        "lastName": "Handey",
+        "firstName": "Jack",
+        "middleName": "Michael",
+        "dateOfBirth": "1965-07-08T00:00:01Z",
+        "phone": "+1 (212) 567-8912",
+        "mobilePhone": "+1 (212) 678-9123",
+        "email": "jhandey@biglibrary.org"
       }
     }
   ],
