--- a/pom.xml
+++ b/pom.xml
@@ -364,7 +364,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <raml-module-builder.version>11.0.0</raml-module-builder.version>
-    <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
+    <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
     <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
