--- a/ramls/examples/group.sample
+++ b/ramls/examples/group.sample
@@ -1,4 +1,5 @@
 {
   "group": "librarian",
-  "desc": "basic lib group"
+  "desc": "basic lib group",
+  "id": "b4b5e97a-0a99-4db9-97df-4fdf406ec74d"
 }
