--- a/ramls/examples/user_collection.sample
+++ b/ramls/examples/user_collection.sample
@@ -4,6 +4,7 @@
       "username": "jhandey",
       "id": "7261ecaae3a74dc68b468e12a70b1aec",
       "active": true,
+      "patronGroup": "4bb563d9-3f9d-4e1e-8d1d-04e75666d68f",
       "meta": {
         "creation_date": "2016-11-05T0723",
         "last_login_date": ""
