--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>domain-models-runtime</artifactId>
       <version>${raml-module-builder.version}</version>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.9</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
