--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>13.0.1-SNAPSHOT</version>
+  <version>13.0.0</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -363,7 +363,7 @@
     <url>https://github.com/folio-org/mod-users</url>
     <connection>scm:git:git://github.com:folio-org/mod-users.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-users.git</developerConnection>
-    <tag>v10.1.1</tag>
+    <tag>v13.0.0</tag>
   </scm>
 
   <properties>
