Add schemas to resources, specify schema paths in Criteria to address value type issue. Adjust pom, news

--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,23 @@
               </resources>
             </configuration>
           </execution>
+          <execution>
+            <id>copy-resources-3</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/src/main/resources</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${ramlfiles_path}</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+
         </executions>
       </plugin>
 
