--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>14.1.0-snapshot</version>
+  <version>14.1.0</version>
   <packaging>jar</packaging>
 
   <licenses>
