--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,23 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
       <version>2.9.9</version>
+  	</dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-unit</artifactId>
+      <version>3.4.0</version>
+      <scope>test</scope>
+      <type>jar</type>
     </dependency>
   </dependencies>
   <build>
@@ -431,7 +448,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>13.0.2</raml-module-builder.version>
+    <raml-module-builder.version>15.0.0</raml-module-builder.version>
     <ramlfiles_path>${basedir}/raml-util-local/ramls/mod-users</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util-local</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
