--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>14.3.0-SNAPSHOT</version>
+  <version>15.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -448,9 +448,9 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>15.0.0</raml-module-builder.version>
-    <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
-    <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
+    <raml-module-builder.version>16.0.3</raml-module-builder.version>
+    <ramlfiles_path>${basedir}/raml-util-local/ramls/mod-users</ramlfiles_path>
+    <ramlfiles_util_path>${basedir}/raml-util-local</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
     <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
     <postgres.port>5433</postgres.port>
