--- a/pom.xml
+++ b/pom.xml
@@ -271,7 +271,7 @@
                 <replace token="protocols: [ HTTPS ]" value="protocols: [ HTTP ]" dir="${basedir}/target/classes/apidocs/raml">
                   <include name="**/*.raml" />
                 </replace>
-                <replace token="../.." value="../raml-util-local" dir="${basedir}/target/classes/apidocs/raml">
+                <replace token="../.." value="../raml-util" dir="${basedir}/target/classes/apidocs/raml">
                   <include name="**/*.raml" />
                 </replace>
               </target>
@@ -394,8 +394,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <raml-module-builder.version>16.0.3</raml-module-builder.version>
-    <ramlfiles_path>${basedir}/raml-util-local/ramls/mod-users</ramlfiles_path>
-    <ramlfiles_util_path>${basedir}/raml-util-local</ramlfiles_util_path>
+    <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
+    <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
     <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
     <postgres.port>5433</postgres.port>
