custom deserializer for user to set inactive after expiration

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
-      <version>${raml-module-builder.version}</version>
+      <version>19.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
