--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
-      <version>19.0.1-SNAPSHOT</version>
+      <version>${raml-module-builder.version}</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -413,7 +413,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>18.0.1</raml-module-builder.version>
+    <raml-module-builder.version>19.0.1-SNAPSHOT</raml-module-builder.version>
     <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
