--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.folio</groupId>
   <artifactId>mod-users</artifactId>
-  <version>14.11.1-SNAPSHOT</version>
+  <version>14.11.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -41,17 +41,17 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
-      <version>3.4.1</version>
+	  <version>${vertx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
-      <version>3.4.1</version>
+	  <version>${vertx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-unit</artifactId>
-      <version>3.4.1</version>
+	  <version>${vertx.version}</version>
       <scope>test</scope>
       <type>jar</type>
     </dependency>
@@ -413,7 +413,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>19.0.1-SNAPSHOT</raml-module-builder.version>
+	<raml-module-builder.version>19.1.0</raml-module-builder.version>
+	<vertx.version>3.5.1</vertx.version>
     <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
     <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
     <postgresrunner.port>5434</postgresrunner.port>
