--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
               <outputDirectory>${basedir}/target/classes/apidocs/raml-util</outputDirectory>
               <resources>
                 <resource>
-                  <directory>${ramlfiles_util_path}</directory>
+                  <directory>${ramlfiles_path}</directory>
                   <filtering>true</filtering>
                 </resource>
               </resources>
@@ -413,10 +413,9 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>19.1.1</raml-module-builder.version>
+    <raml-module-builder.version>21.0.1</raml-module-builder.version>
     <vertx.version>3.5.1</vertx.version>
-    <ramlfiles_path>${basedir}/raml-util/ramls/mod-users</ramlfiles_path>
-    <ramlfiles_util_path>${basedir}/raml-util</ramlfiles_util_path>
+    <ramlfiles_path>${basedir}/ramls/raml-util/ramls/mod-users</ramlfiles_path>
     <postgresrunner.port>5434</postgresrunner.port>
     <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
     <postgres.port>5433</postgres.port>
