--- a/pom.xml
+++ b/pom.xml
@@ -415,7 +415,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <raml-module-builder.version>21.0.1</raml-module-builder.version>
     <vertx.version>3.5.1</vertx.version>
-    <ramlfiles_path>${basedir}/ramls/raml-util/ramls/mod-users</ramlfiles_path>
+    <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <postgresrunner.port>5434</postgresrunner.port>
     <!-- Postgres port for Jenkins CI build environment https://issues.folio.org/browse/METADATA-10 -->
     <postgres.port>5433</postgres.port>
