--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -9,7 +9,7 @@ appender.console.layout.pattern = %d{HH:mm:ss} %-5p %-20.20C{1} %m%n
 
 #rootLogger.level = error
 #rootLogger.level = warn
-#rootLogger.level = info
-rootLogger.level = debug
+rootLogger.level = info
+#rootLogger.level = debug
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
