--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,22 @@
             </configuration>
           </execution>
           <execution>
+            <id>copy-reference-data</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/classes/ref-data</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${basedir}/reference-data</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+          <execution>
             <id>filter-descriptor-inputs</id>
             <phase>generate-resources</phase>
             <goals>
@@ -419,7 +435,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>23.8.0</raml-module-builder.version>
+    <raml-module-builder.version>23.9.0-SNAPSHOT</raml-module-builder.version>
     <vertx.version>3.5.4</vertx.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <postgresrunner.port>5434</postgresrunner.port>
