--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
             <id>git submodule update</id>
             <phase>initialize</phase>
             <configuration>
+              <skip>${git.submodule.update.skip}</skip>
               <executable>git</executable>
               <arguments>
                 <argument>submodule</argument>
@@ -435,6 +436,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <git.submodule.update.skip>false</git.submodule.update.skip>
     <raml-module-builder.version>23.11.0</raml-module-builder.version>
     <vertx.version>3.5.4</vertx.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
