--- a/pom.xml
+++ b/pom.xml
@@ -419,7 +419,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>26.2.2</raml-module-builder.version>
+    <raml-module-builder.version>26.5.0-SNAPSHOT</raml-module-builder.version>
     <vertx.version>3.5.4</vertx.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
