--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,18 @@
       <type>jar</type>
     </dependency>
     <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>${rest-assured.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>folio-service-tools-test</artifactId>
+      <version>${folio-service-tools.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.folio</groupId>
       <artifactId>testing</artifactId>
       <version>${raml-module-builder.version}</version>
@@ -426,6 +438,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <raml-module-builder.version>27.0.0</raml-module-builder.version>
     <vertx.version>3.5.4</vertx.version>
+    <rest-assured.version>3.3.0</rest-assured.version>
+    <folio-service-tools.version>1.2.0</folio-service-tools.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
 </project>
