--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-custom-fields</artifactId>
-      <version>0.1.0</version>
+      <version>1.0.3</version>
     </dependency>
     <dependency>
       <groupId>joda-time</groupId>
@@ -436,10 +436,11 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <raml-module-builder.version>27.0.0</raml-module-builder.version>
-    <vertx.version>3.5.4</vertx.version>
+    <raml-module-builder.version>29.2.0</raml-module-builder.version>
+    <generate_routing_context>/users</generate_routing_context>
+    <vertx.version>3.8.4</vertx.version>
     <rest-assured.version>3.3.0</rest-assured.version>
-    <folio-service-tools.version>1.2.0</folio-service-tools.version>
+    <folio-service-tools.version>1.3.1</folio-service-tools.version>
     <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
   </properties>
 </project>
