--- a/src/main/resources/vertx-default-jul-logging.properties
+++ b/src/main/resources/vertx-default-jul-logging.properties
@@ -37,3 +37,4 @@ io.vertx.ext.web.level=INFO
 io.vertx.level=INFO
 io.netty.util.internal.PlatformDependent.level=SEVERE
 #org.folio.rest.level=FINEST
+org.folio.service.level=FINE
