MODUSERS-176 code review refactoring

--- a/ramls/examples/patron-block-condition.sample
+++ b/ramls/examples/patron-block-condition.sample
@@ -4,5 +4,6 @@
   "blockBorrowings": false,
   "blockRenewals": false,
   "blockRequests": false,
+  "valueType": "Integer",
   "message": "The maximum number of charged out items has been reached"
 }
