--- a/ramls/examples/patron-block-condition.sample
+++ b/ramls/examples/patron-block-condition.sample
@@ -1,7 +1,7 @@
 {
   "id": "3d7c52dc-c732-4223-8bf8-e5917801386f",
   "name": "Maximum number of items charged out",
-  "blockBorrowings": false,
+  "blockBorrowing": true,
   "blockRenewals": false,
   "blockRequests": false,
   "valueType": "Integer",
