MODUSERS-196 Add support of preferred name on user record

--- a/ramls/examples/user.sample
+++ b/ramls/examples/user.sample
@@ -11,6 +11,7 @@
   "personal": {
     "lastName": "Handey",
     "firstName": "Jack",
+    "preferredFirstName": "Jackie",
     "email": "jhandey@biglibrary.org",
     "phone": "2125551212"
   }
