[MODUSERS-423]- Added CleanUp job

--- a/ramls/configuration.json
+++ b/ramls/configuration.json
@@ -28,7 +28,7 @@
       "type": "string"
     },
     "maxFileSize": {
-      "description": "Size of profile picture",
+      "description": "Size of profile picture in MB",
       "type": "number"
     },
     "metadata": {
